@@ -4,12 +4,3 @@ dependencies {
     implementation(project(":uplift-flogs"))
     implementation(project(":uplift-kernel"))
 }
-
-tasks.withType<JavaCompile>().all {
-    options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
-}
-
-tasks.withType<Test>().all {
-    options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
-}
-
