@@ -11,7 +11,3 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:6.0.1")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher:6.0.1")
 }
-
-tasks.withType<JavaCompile>().all {
-    options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
-}
